infras/k8s/auth-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 31285
