infras/k8s/category-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: category-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
        - name: category
          image: longle2003/category:latest
---

apiVersion: v1
kind: Service
metadata:
  name: category-srv
spec: 
  selector:
    app: category
  ports:
    - name: category
      protocol: TCP
      port: 4004
      targetPort: 4004
