infras/k8s/client-classic-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-classic-loadbalancer-srv
spec: 
  type: LoadBalancer 
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
