infras/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: longle2003/client
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.9"
            limits:
              memory: "2Gi"
              cpu: "2"
---

apiVersion: v1
kind: Service
metadata:
  name: client-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3006
      targetPort: 3006
