infras/k8s/client-network-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-network-loadbalancer-srv
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec: 
  type: LoadBalancer 
  selector:
    app: client
  ports:
    - name: client
      port: 3000
      targetPort: 3000
