infras/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: longle2003/comment
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: comment-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 4001
      targetPort: 4001
