infras/k8s/comment-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comment-mongo-depl  #depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: comment-mongo
  template: 
    metadata:
      labels: 
        app: comment-mongo
    spec: 
      containers: 
        - name: db
          image: mongo
          volumeMounts:
            - name: comment-persistent-storage
              mountPath: /data/db
      volumes:
        - name: comment-persistent-storage
          persistentVolumeClaim:
            claimName: ebs-comment-pvc
            
---

apiVersion: v1
kind: Service
metadata:
  name: comment-mongo-srv
spec:
  selector: 
    app: comment-mongo
  ports:  
    - name: comment-db
      protocol: TCP
      port: 27017
      targetPort: 27017
