infras/k8s/issue-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: issue
  template:
    metadata:   
      labels: 
        app: issue
    spec:
      containers:
        - name: issue
          image: longle2003/issue
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: issue-nodeport-srv
spec: 
  type: NodePort
  selector: 
    app: issue
  ports:
    - name: issue
      protocol: TCP
      port: 4002
      targetPort: 4002
