infras/k8s/issue-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: issue-mongo-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: issue-mongo
  template: 
    metadata:
      labels: 
        app: issue-mongo
    spec: 
      containers: 
        - name: db
          image: mongo
          volumeMounts:
            - name: issue-persistent-storage
              mountPath: /data/db
      volumes:
        - name: issue-persistent-storage
          persistentVolumeClaim:
            claimName: ebs-issue-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: issue-mongo-srv
spec:
  selector: 
    app: issue-mongo
  ports:  
    - name: issue-db
      protocol: TCP
      port: 27017
      targetPort: 27017
