infras/k8s/projectmanagement-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectmanagement-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: projectmanagement
  template:
    metadata:   
      labels: 
        app: projectmanagement
    spec:
      containers:
        - name: projectmanagement
          image: longle2003/projectmanagement
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: projectmanagement-nodeport-srv
spec:
  type: NodePort
  selector: 
    app: projectmanagement
  ports:
    - name: projectmanagement
      protocol: TCP
      port: 4003
      targetPort: 4003
