infras/k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: category-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: category
  ports:
    - name: category
      protocol: TCP
      port: 4004
      targetPort: 4004

---

apiVersion: v1
kind: Service
metadata:
  name: projectmanagement-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: projectmanagement
  ports:
    - name: projectmanagement
      protocol: TCP
      port: 4003
      targetPort: 4003

---

apiVersion: v1
kind: Service
metadata:
  name: issue-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: issue
  ports:
    - name: issue
      protocol: TCP
      port: 4002
      targetPort: 4002

---

apiVersion: v1
kind: Service
metadata:
  name: comment-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 4001
      targetPort: 4001

---

apiVersion: v1
kind: Service
metadata:
  name: auth-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 4000
      targetPort: 4000
