infras/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec: 
  ingressClassName: nginx
  tls:
    - hosts: 
      - www.nt533uitjiradev.click
      secretName: ca-ingress-tls
  rules:
    - host: www.nt533uitjiradev.click
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-nodeport-srv
                port: 
                  number: 4000
          - path: /api/comment/?(.*)
            pathType: Prefix
            backend: 
              service:  
                name: comment-nodeport-srv
                port:
                  number: 4001
          - path: /api/issue/?(.*)
            pathType: Prefix
            backend: 
              service:  
                name: issue-nodeport-srv
                port:
                  number: 4002
          - path: /api/projectmanagement/?(.*)
            pathType: Prefix
            backend: 
              service:  
                name: projectmanagement-srv
                port:
                  number: 4003
          - path: /api/category/?(.*)
            pathType: Prefix
            backend:
              service:
                name: category-nodeport-srv
                port: 
                  number: 4004
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-nodeport-srv
                port: 
                  number: 3000
